<resources>
    <string name="app_name">ReminderApp</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="reminder">Reminder</string>
    <string name="sign_in_to_your_account">Log in to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="confirm_password">Confirm password</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="welcome">Welcome,</string>
    <string name="reminders">Reminders:</string>
    <string name="new_reminder">NEW REMINDER</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="log_out">LOG OUT</string>
    <string name="edit_your_profile">EDIT YOUR PROFILE</string>
    <string name="change_username">CHANGE USERNAME</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="change_your_password">Change your password</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="change_your_username">Change your username</string>
    <string name="new_username">New username</string>
    <string name="reminders_will_be_created_in_this_activity">REMINDERS WILL BE CREATED IN THIS ACTIVITY</string>
    <string name="date">Date</string>
    <string name="reminder_message">Reminder message</string>
    <string name="add_new_reminder">ADD NEW REMINDER</string>
    <string name="date_dd_mm_yyyy">Date (DD/MM/YYYY)</string>
    <string name="time">Time</string>
    <string name="add">ADD</string>
    <string name="contact_name">Contact Name</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="reminder_message2">Reminder Message</string>
    <string name="rem">Rem</string>
    <string name="reminder2">rem</string>
    <string name="reminder_type">Reminder type</string>
    <string name="edit_reminder">EDIT REMINDER</string>
    <string name="edit_a_message">Edit a message</string>
    <string name="delete_reminder">DELETE REMINDER</string>
    <string name="message">Message</string>
    <string name="speak">SPEAK</string>
    <string name="notification_time_hours">Notification time (hours)</string>
    <string name="reminder_notifications">Reminder notifications</string>
    <string name="optional_features">Optional features</string>
    <string name="location">Location</string>
    <string name="notification_time_hours_optional">Notification time (hours, optional)</string>
    <string name="location_optional">Location (optional)</string>


</resources>