<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:text="@string/log_out"
        app:backgroundTint="#BD0808"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtUser2"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />


    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listReminders"
        android:layout_width="240dp"
        android:layout_height="164dp"

        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewRem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="24dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/reminders"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listReminders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNewRem"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/new_reminder"

        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/btnEditProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>