<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/reminderImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/reminder2" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd = "16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/reminderMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_message2"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reminderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_time" />
    </LinearLayout>

</LinearLayout>