<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="184dp"
        android:layout_height="149dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_box_24px" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="228dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/edit_your_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.265" />

    <Button
        android:id="@+id/btnChangeName"
        android:layout_width="185dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:text="@string/change_username"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBottom_toTopOf="@+id/btnChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="185dp"
        android:layout_height="52dp"
        android:layout_marginBottom="216dp"
        android:text="@string/change_password"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>